app/stylesheets/partials/_page.scss
@import "compass/css3";
@import "eleven40";
@import "partials/code";

//-----------------------------------------------
// The following html5-boilerplate styles should
// probably be customized for each site
//-----------------------------------------------

body, select, input, textarea {
  color: $font-color;
  // Set your base font here, to apply evenly
  // font-family: Georgia, serif;
}

//Headers (h1, h2, etc) have no default font-size or margin; define those yourself
h1, h2, h3, h4, h5, h6 {
  // Bold might not be the best choice if you are
  // embedding a @font-face that's already bold
  font-family: $heading-font-family;
  font-weight: bold;
}

h1 {
  @include font-size(32px);
}

h2 {
  @include font-size(24px);
}

p {
  margin-bottom: 13px;
}

code {
  font-family: $code-font-family;
}

em {
  font-style: italic;
}

a, a:active, a:visited { color: $link-color; }
a:hover { color: $link-hover-color; }

strong, th {
  font-weight: bold;
}

small {
  // Use font-size mixin to convert to percentage for YUI
  // http://developer.yahoo.com/yui/3/cssfonts/#fontsize
  @include font-size(11px);  // approx 85% when base-font-size eq 13px
}

// Add the 'required' attribute on your
// inputs if you want to use these
input:valid, textarea:valid {}
input:invalid, textarea:invalid {
  @include border-radius(1px);
  @include box-shadow(red, 0, 0, 5px, 0);
}
.no-boxshadow input:invalid,
.no-boxshadow textarea:invalid { background-color: #f0dddd; }

ul {
 margin-bottom: 12px;
}


//-----------------------------------
// Add your own custom styles below
//-----------------------------------

body {
  font-family: $base-font-family;
}

#container {
  @include eleven40-container;
}

#header-container {
  @include eleven40-row;
  header {
    @include eleven40-twelvecol;
    @include eleven40-last;
  }
}

#inner-container {
  @include eleven40-row;
  #menu {
    @include eleven40-threecol;
    font-family: $heading-font-family;
    ul {
      @include font-size(12px);
      margin-bottom: 18px;
    }
  }

  #main {
    @include eleven40-ninecol;
    @include eleven40-last;
    margin-bottom: 18px;
    pre {
      @include code;
    }
    time {
      margin-bottom: 12px;
    }
  }
}

#site-title {
  margin-bottom: 12px;
  #tagline {
    font-weight: normal;
  }
}

#footer-container {
  @include eleven40-row;
  #footer {
    @include eleven40-twelvecol;
    @include eleven40-last;
    font-family: $heading-font-family;
    text-align: center;
    margin-bottom: 18px;
  }
}

.content {
  margin-bottom: 18px;
}

